projects/tpdsl-code/code/semantics/promote/CymbolParser.java
/***
 * Excerpted from "Language Implementation Patterns",
 * published by The Pragmatic Bookshelf.
 * Copyrights apply to this code. It may not be used to create training material, 
 * courses, books, articles, and the like. Contact us if you are in doubt.
 * We make no guarantees that this code is fit for any purpose. 
 * Visit http://www.pragmaticprogrammer.com/titles/tpdsl for more book information.
***/
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g 2009-09-23 17:37:49

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class CymbolParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "METHOD_DECL", "ARG_DECL", "BLOCK", "VAR_DECL", "FIELD_DECL", "CALL", "ELIST", "EXPR", "UNARY_MINUS", "UNARY_NOT", "ASSIGN", "INDEX", "ID", "INT", "FLOAT", "CHAR", "LETTER", "WS", "SL_COMMENT", "'struct'", "'{'", "'}'", "';'", "'[]'", "'('", "')'", "','", "'float'", "'int'", "'char'", "'boolean'", "'void'", "'if'", "'else'", "'return'", "'!='", "'=='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", "'!'", "'['", "']'", "'.'", "'true'", "'false'"
    };
    public static final int INDEX=15;
    public static final int T__42=42;
    public static final int T__28=28;
    public static final int T__23=23;
    public static final int T__51=51;
    public static final int EXPR=11;
    public static final int T__47=47;
    public static final int FLOAT=18;
    public static final int T__50=50;
    public static final int FIELD_DECL=8;
    public static final int BLOCK=6;
    public static final int T__39=39;
    public static final int T__30=30;
    public static final int T__46=46;
    public static final int T__52=52;
    public static final int UNARY_MINUS=12;
    public static final int INT=17;
    public static final int UNARY_NOT=13;
    public static final int T__27=27;
    public static final int ASSIGN=14;
    public static final int T__24=24;
    public static final int T__49=49;
    public static final int METHOD_DECL=4;
    public static final int T__48=48;
    public static final int T__54=54;
    public static final int T__34=34;
    public static final int SL_COMMENT=22;
    public static final int ELIST=10;
    public static final int ID=16;
    public static final int LETTER=20;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int ARG_DECL=5;
    public static final int WS=21;
    public static final int CHAR=19;
    public static final int T__44=44;
    public static final int T__33=33;
    public static final int T__29=29;
    public static final int T__45=45;
    public static final int T__43=43;
    public static final int T__31=31;
    public static final int T__40=40;
    public static final int EOF=-1;
    public static final int T__53=53;
    public static final int T__32=32;
    public static final int T__38=38;
    public static final int CALL=9;
    public static final int T__37=37;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int VAR_DECL=7;
    public static final int T__41=41;

    // delegates
    // delegators


        public CymbolParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CymbolParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CymbolParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g"; }


    public static class compilationUnit_return extends ParserRuleReturnScope {
        CymbolAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "compilationUnit"
    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:22:1: compilationUnit : ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+ ;
    public final CymbolParser.compilationUnit_return compilationUnit() throws RecognitionException {
        CymbolParser.compilationUnit_return retval = new CymbolParser.compilationUnit_return();
        retval.start = input.LT(1);

        CymbolAST root_0 = null;

        CymbolParser.structDeclaration_return structDeclaration1 = null;

        CymbolParser.methodDeclaration_return methodDeclaration2 = null;

        CymbolParser.varDeclaration_return varDeclaration3 = null;



        try {
            // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:24:5: ( ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+ )
            // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:24:9: ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+
            {
            root_0 = (CymbolAST)adaptor.nil();

            // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:24:9: ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=4;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==23) ) {
                    int LA1_2 = input.LA(2);

                    if ( (LA1_2==ID) ) {
                        int LA1_4 = input.LA(3);

                        if ( (LA1_4==24) ) {
                            alt1=1;
                        }
                        else if ( (LA1_4==ID) ) {
                            int LA1_5 = input.LA(4);

                            if ( (LA1_5==ASSIGN||(LA1_5>=26 && LA1_5<=27)) ) {
                                alt1=3;
                            }
                            else if ( (LA1_5==28) ) {
                                alt1=2;
                            }


                        }


                    }


                }
                else if ( ((LA1_0>=31 && LA1_0<=35)) ) {
                    int LA1_3 = input.LA(2);

                    if ( (LA1_3==ID) ) {
                        int LA1_5 = input.LA(3);

                        if ( (LA1_5==ASSIGN||(LA1_5>=26 && LA1_5<=27)) ) {
                            alt1=3;
                        }
                        else if ( (LA1_5==28) ) {
                            alt1=2;
                        }


                    }


                }


                switch (alt1) {
            	case 1 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:26:5: structDeclaration
            	    {
            	    pushFollow(FOLLOW_structDeclaration_in_compilationUnit164);
            	    structDeclaration1=structDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, structDeclaration1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:26:25: methodDeclaration
            	    {
            	    pushFollow(FOLLOW_methodDeclaration_in_compilationUnit168);
            	    methodDeclaration2=methodDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, methodDeclaration2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:26:45: varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_compilationUnit172);
            	    varDeclaration3=varDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, varDeclaration3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CymbolAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
            if ( state.backtracking==0 ) {
              ((CymbolAST)retval.tree).setUnknownTokenBoundaries();
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CymbolAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"

    public static class structDeclaration_return extends ParserRuleReturnScope {
        CymbolAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "structDeclaration"
    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:30:1: structDeclaration : 'struct' ID '{' ( structMember )+ '}' ';' -> ^( 'struct' ID ( structMember )+ ) ;
    public final CymbolParser.structDeclaration_return structDeclaration() throws RecognitionException {
        CymbolParser.structDeclaration_return retval = new CymbolParser.structDeclaration_return();
        retval.start = input.LT(1);

        CymbolAST root_0 = null;

        Token string_literal4=null;
        Token ID5=null;
        Token char_literal6=null;
        Token char_literal8=null;
        Token char_literal9=null;
        CymbolParser.structMember_return structMember7 = null;


        CymbolAST string_literal4_tree=null;
        CymbolAST ID5_tree=null;
        CymbolAST char_literal6_tree=null;
        CymbolAST char_literal8_tree=null;
        CymbolAST char_literal9_tree=null;
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_structMember=new RewriteRuleSubtreeStream(adaptor,"rule structMember");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:31:2: ( 'struct' ID '{' ( structMember )+ '}' ';' -> ^( 'struct' ID ( structMember )+ ) )
            // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:31:4: 'struct' ID '{' ( structMember )+ '}' ';'
            {
            string_literal4=(Token)match(input,23,FOLLOW_23_in_structDeclaration191); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_23.add(string_literal4);

            ID5=(Token)match(input,ID,FOLLOW_ID_in_structDeclaration193); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID5);

            char_literal6=(Token)match(input,24,FOLLOW_24_in_structDeclaration195); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_24.add(char_literal6);

            // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:31:20: ( structMember )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==23||(LA2_0>=31 && LA2_0<=35)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:31:20: structMember
            	    {
            	    pushFollow(FOLLOW_structMember_in_structDeclaration197);
            	    structMember7=structMember();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_structMember.add(structMember7.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);

            char_literal8=(Token)match(input,25,FOLLOW_25_in_structDeclaration200); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_25.add(char_literal8);

            char_literal9=(Token)match(input,26,FOLLOW_26_in_structDeclaration202); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_26.add(char_literal9);



            // AST REWRITE
            // elements: ID, structMember, 23
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CymbolAST)adaptor.nil();
            // 31:42: -> ^( 'struct' ID ( structMember )+ )
            {
                // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:31:45: ^( 'struct' ID ( structMember )+ )
                {
                CymbolAST root_1 = (CymbolAST)adaptor.nil();
                root_1 = (CymbolAST)adaptor.becomeRoot(stream_23.nextNode(), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                if ( !(stream_structMember.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_structMember.hasNext() ) {
                    adaptor.addChild(root_1, stream_structMember.nextTree());

                }
                stream_structMember.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CymbolAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CymbolAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "structDeclaration"

    public static class structMember_return extends ParserRuleReturnScope {
        CymbolAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "structMember"
    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:34:1: structMember : ( type ID ';' -> ^( FIELD_DECL type ID ) | type ID '[]' ';' -> ^( FIELD_DECL ^( '[]' type ) ID ) | structDeclaration );
    public final CymbolParser.structMember_return structMember() throws RecognitionException {
        CymbolParser.structMember_return retval = new CymbolParser.structMember_return();
        retval.start = input.LT(1);

        CymbolAST root_0 = null;

        Token ID11=null;
        Token char_literal12=null;
        Token ID14=null;
        Token string_literal15=null;
        Token char_literal16=null;
        CymbolParser.type_return type10 = null;

        CymbolParser.type_return type13 = null;

        CymbolParser.structDeclaration_return structDeclaration17 = null;


        CymbolAST ID11_tree=null;
        CymbolAST char_literal12_tree=null;
        CymbolAST ID14_tree=null;
        CymbolAST string_literal15_tree=null;
        CymbolAST char_literal16_tree=null;
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:35:2: ( type ID ';' -> ^( FIELD_DECL type ID ) | type ID '[]' ';' -> ^( FIELD_DECL ^( '[]' type ) ID ) | structDeclaration )
            int alt3=3;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=31 && LA3_0<=35)) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==ID) ) {
                    int LA3_3 = input.LA(3);

                    if ( (LA3_3==27) ) {
                        alt3=2;
                    }
                    else if ( (LA3_3==26) ) {
                        alt3=1;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 3, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA3_0==23) ) {
                int LA3_2 = input.LA(2);

                if ( (LA3_2==ID) ) {
                    int LA3_4 = input.LA(3);

                    if ( (LA3_4==24) ) {
                        alt3=3;
                    }
                    else if ( (LA3_4==ID) ) {
                        int LA3_3 = input.LA(4);

                        if ( (LA3_3==27) ) {
                            alt3=2;
                        }
                        else if ( (LA3_3==26) ) {
                            alt3=1;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 3, 3, input);

                            throw nvae;
                        }
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 4, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 2, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:35:4: type ID ';'
                    {
                    pushFollow(FOLLOW_type_in_structMember226);
                    type10=type();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_type.add(type10.getTree());
                    ID11=(Token)match(input,ID,FOLLOW_ID_in_structMember228); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID11);

                    char_literal12=(Token)match(input,26,FOLLOW_26_in_structMember230); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_26.add(char_literal12);



                    // AST REWRITE
                    // elements: type, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CymbolAST)adaptor.nil();
                    // 35:18: -> ^( FIELD_DECL type ID )
                    {
                        // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:35:21: ^( FIELD_DECL type ID )
                        {
                        CymbolAST root_1 = (CymbolAST)adaptor.nil();
                        root_1 = (CymbolAST)adaptor.becomeRoot((CymbolAST)adaptor.create(FIELD_DECL, "FIELD_DECL"), root_1);

                        adaptor.addChild(root_1, stream_type.nextTree());
                        adaptor.addChild(root_1, stream_ID.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:36:4: type ID '[]' ';'
                    {
                    pushFollow(FOLLOW_type_in_structMember247);
                    type13=type();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_type.add(type13.getTree());
                    ID14=(Token)match(input,ID,FOLLOW_ID_in_structMember249); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID14);

                    string_literal15=(Token)match(input,27,FOLLOW_27_in_structMember251); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_27.add(string_literal15);

                    char_literal16=(Token)match(input,26,FOLLOW_26_in_structMember253); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_26.add(char_literal16);



                    // AST REWRITE
                    // elements: type, ID, 27
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CymbolAST)adaptor.nil();
                    // 36:21: -> ^( FIELD_DECL ^( '[]' type ) ID )
                    {
                        // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:36:24: ^( FIELD_DECL ^( '[]' type ) ID )
                        {
                        CymbolAST root_1 = (CymbolAST)adaptor.nil();
                        root_1 = (CymbolAST)adaptor.becomeRoot((CymbolAST)adaptor.create(FIELD_DECL, "FIELD_DECL"), root_1);

                        // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:36:37: ^( '[]' type )
                        {
                        CymbolAST root_2 = (CymbolAST)adaptor.nil();
                        root_2 = (CymbolAST)adaptor.becomeRoot(stream_27.nextNode(), root_2);

                        adaptor.addChild(root_2, stream_type.nextTree());

                        adaptor.addChild(root_1, root_2);
                        }
                        adaptor.addChild(root_1, stream_ID.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 3 :
                    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:37:4: structDeclaration
                    {
                    root_0 = (CymbolAST)adaptor.nil();

                    pushFollow(FOLLOW_structDeclaration_in_structMember272);
                    structDeclaration17=structDeclaration();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, structDeclaration17.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CymbolAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CymbolAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "structMember"

    public static class methodDeclaration_return extends ParserRuleReturnScope {
        CymbolAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "methodDeclaration"
    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:41:1: methodDeclaration : type ID '(' ( formalParameters )? ')' block -> ^( METHOD_DECL type ID ( formalParameters )? block ) ;
    public final CymbolParser.methodDeclaration_return methodDeclaration() throws RecognitionException {
        CymbolParser.methodDeclaration_return retval = new CymbolParser.methodDeclaration_return();
        retval.start = input.LT(1);

        CymbolAST root_0 = null;

        Token ID19=null;
        Token char_literal20=null;
        Token char_literal22=null;
        CymbolParser.type_return type18 = null;

        CymbolParser.formalParameters_return formalParameters21 = null;

        CymbolParser.block_return block23 = null;


        CymbolAST ID19_tree=null;
        CymbolAST char_literal20_tree=null;
        CymbolAST char_literal22_tree=null;
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_formalParameters=new RewriteRuleSubtreeStream(adaptor,"rule formalParameters");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:42:5: ( type ID '(' ( formalParameters )? ')' block -> ^( METHOD_DECL type ID ( formalParameters )? block ) )
            // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:42:9: type ID '(' ( formalParameters )? ')' block
            {
            pushFollow(FOLLOW_type_in_methodDeclaration289);
            type18=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type18.getTree());
            ID19=(Token)match(input,ID,FOLLOW_ID_in_methodDeclaration291); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID19);

            char_literal20=(Token)match(input,28,FOLLOW_28_in_methodDeclaration293); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_28.add(char_literal20);

            // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:42:21: ( formalParameters )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==23||(LA4_0>=31 && LA4_0<=35)) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:42:21: formalParameters
                    {
                    pushFollow(FOLLOW_formalParameters_in_methodDeclaration295);
                    formalParameters21=formalParameters();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_formalParameters.add(formalParameters21.getTree());

                    }
                    break;

            }

            char_literal22=(Token)match(input,29,FOLLOW_29_in_methodDeclaration298); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_29.add(char_literal22);

            pushFollow(FOLLOW_block_in_methodDeclaration300);
            block23=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block23.getTree());


            // AST REWRITE
            // elements: type, block, ID, formalParameters
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CymbolAST)adaptor.nil();
            // 43:9: -> ^( METHOD_DECL type ID ( formalParameters )? block )
            {
                // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:43:12: ^( METHOD_DECL type ID ( formalParameters )? block )
                {
                CymbolAST root_1 = (CymbolAST)adaptor.nil();
                root_1 = (CymbolAST)adaptor.becomeRoot((CymbolAST)adaptor.create(METHOD_DECL, "METHOD_DECL"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());
                // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:43:34: ( formalParameters )?
                if ( stream_formalParameters.hasNext() ) {
                    adaptor.addChild(root_1, stream_formalParameters.nextTree());

                }
                stream_formalParameters.reset();
                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CymbolAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CymbolAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "methodDeclaration"

    public static class formalParameters_return extends ParserRuleReturnScope {
        CymbolAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "formalParameters"
    // /Users/parrt/research/book/TPDSL/Book/code/semantics/promote/Cymbol.g:47:1: formalParameters : parameter ( ',' parameter )* -> ( parameter )+ ;
    public final CymbolParser.formalParameters_return formalParameters() throws RecognitionException {
        CymbolParser.formalParameters_return retval = new CymbolParser.formalParameters_return();
        retval.start = input.LT(1);

        CymbolAST root_0 = null;

        Token char_literal25=null;
        CymbolParser.parameter_return parameter24 = null;

        CymbolParser.parameter_return parameter26 = null;

